--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "description": "Nogic JQS Travels Request Server Application",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "jest"
+  },
+  "jest":{
+    "testMatch":[
+      "**/travels/test/**/*.js?(x)", "**/?(*.)(spec|test).js?(x)"
+    ],
+    "automock": false
   },
   "author": "Paul Okeke",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "knex": "^0.13.0",
     "mysql2": "^1.3.5",
-    "sequelize": "^4.2.1",
     "swagger-jsdoc": "^1.9.5"
   },
   "devDependencies": {
