--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "test": "jest"
   },
-  "jest":{
-    "testMatch":[
-      "**/travels/test/**/*.js?(x)", "**/?(*.)(spec|test).js?(x)"
+  "jest": {
+    "testMatch": [
+      "**/travels/test/**/*.js?(x)",
+      "**/?(*.)(spec|test).js?(x)"
     ],
     "automock": false
   },
@@ -17,6 +18,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "jsonwebtoken": "^7.4.1",
     "knex": "^0.13.0",
     "mysql2": "^1.3.5",
     "swagger-jsdoc": "^1.9.5"
