--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.15.3",
     "jsonwebtoken": "^7.4.1",
     "knex": "^0.13.0",
+    "method-override": "^2.3.9",
     "mysql2": "^1.3.5",
     "swagger-jsdoc": "^1.9.5"
   },
