--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "knex": "^0.13.0",
     "method-override": "^2.3.9",
     "mysql2": "^1.3.5",
-    "swagger-jsdoc": "^1.9.5"
+    "swagger-jsdoc": "^1.9.5",
+    "validate-fields": "^3.7.1"
   },
   "devDependencies": {
     "jest": "^20.0.4"
