--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^7.4.1",
     "knex": "^0.13.0",
     "method-override": "^2.3.9",
+    "multer": "^1.3.0",
     "mysql2": "^1.3.5",
     "swagger-jsdoc": "^1.9.5",
     "validate-fields": "^3.7.1"
