--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "method-override": "^2.3.9",
     "multer": "^1.3.0",
     "mysql2": "^1.3.5",
+    "request": "^2.81.0",
     "swagger-jsdoc": "^1.9.5",
     "validate-fields": "^3.7.1"
   },
