--- a/config.json
+++ b/config.json
@@ -5,7 +5,17 @@
     "password": "Nigeriasns$1",
     "database": "mr_working"
   },
-  "storage":{
-    "path":"/var/www/html/fsm/storage/app/public"
+  "storage": {
+    "path": "/var/www/html/fsm/storage/app/public",
+    "routeStorage": {
+      "meter_readings": {
+        "path": "attachments/meter_readings",
+        "use_parent": true
+      },
+      "faults": {
+        "path": "faults",
+        "use_parent": true
+      }
+    }
   }
 }
