add config path for persistence storage

--- a/config.json
+++ b/config.json
@@ -16,6 +16,9 @@
         "path": "/faults",
         "use_parent": true
       }
+    },
+    "persistence":{
+      "path":"./_persistence/storage"
     }
   }
 }
