--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.17.2",
     "cors": "^2.8.3",
+    "exceljs": "^0.5.1",
     "express": "^4.15.3",
     "jsonwebtoken": "^7.4.1",
     "knex": "^0.13.0",
     "method-override": "^2.3.9",
     "multer": "^1.3.0",
     "mysql2": "^1.3.5",
-    "node-cron": "^1.2.1",
     "node-persist": "^2.1.0",
+    "node-schedule": "^1.2.4",
     "request": "^2.81.0",
     "swagger-jsdoc": "^1.9.5",
     "validate-fields": "^3.7.1"
