removed previous way of querying

--- a/config.json
+++ b/config.json
@@ -15,6 +15,10 @@
       "faults": {
         "path": "/faults",
         "use_parent": true
+      },
+      "work_orders": {
+        "path": "/attachments/work_orders",
+        "use_parent": true
       }
     },
     "persistence":{
