added offset and limit to meter reading route, added notes attachments to notes payload

--- a/config.json
+++ b/config.json
@@ -19,6 +19,10 @@
       "work_orders": {
         "path": "/attachments/work_orders",
         "use_parent": true
+      },
+      "notes": {
+        "path": "/attachments/notes",
+        "use_parent": true
       }
     },
     "persistence": {
