--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.15.3",
     "jsonwebtoken": "^7.4.1",
     "knex": "^0.13.0",
+    "lwip": "0.0.9",
     "method-override": "^2.3.9",
     "multer": "^1.3.0",
     "mysql2": "^1.3.5",
